--- a/git-search/src/app/app.component.html
+++ b/git-search/src/app/app.component.html
@@ -1,2 +1,5 @@
-<app-navbar></app-navbar>
-<app-user-profile></app-user-profile>
+<div class="container-fluid">
+    <app-navbar></app-navbar>
+    <app-user-profile></app-user-profile>
+    <app-repositories></app-repositories>
+</div>
