--- a/git-search/src/app/components/navbar/navbar.component.html
+++ b/git-search/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid" style="padding: 0; margin: 0;">
-    <nav class="navbar sticky-top navbar-expand">
+    <nav class="navbar navbar-expand fixed-top">
         <a class="navbar-brand" href="#">GIT-SEARCH</a>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
