--- a/git-search/src/app/components/repositories/repositories.component.css
+++ b/git-search/src/app/components/repositories/repositories.component.css
@@ -1,5 +1,5 @@
 .repositories{
-    margin-top: 32%;
+    margin-top: 28%;
     margin-left: -50%;
 
 }
@@ -10,6 +10,7 @@
 .repositories .card{
     max-height: 100vh;
     max-width: 230px;
+    border-radius: 10px;
 }
 .repositories .card img{
    width: 100px;
