--- a/git-search/src/app/components/repositories/repositories.component.css
+++ b/git-search/src/app/components/repositories/repositories.component.css
@@ -1,6 +1,7 @@
 .repositories{
-    margin-top: 28%;
-    margin-left: -100%;
+    margin-top: 8%;
+    margin-left: 20%;
+    max-width: 70vw;
 
 }
 .repositories h1{
@@ -8,7 +9,9 @@
    font-weight: bold;
 }
 .repositories .card{
-    max-height: 100vh;
+    max-height: 300px;
+    height: 300px;
+    overflow-y: auto;
     max-width: 230px;
     border-radius: 10px;
 }
@@ -38,4 +41,12 @@
     color: white;
     font-weight: bolder;
     margin-left: 22%;
+}
+.repositories .card-container{
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-gap: 2rem;
+    margin-top: 3%;
+
+
 }
