--- a/git-search/src/app/components/user-profile/user-profile.component.css
+++ b/git-search/src/app/components/user-profile/user-profile.component.css
@@ -1,11 +1,42 @@
+.navbar a{
+    margin-left: 20%;
+    font-size: 28px;
+    color: white;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: 800;
+}
+.navbar{
+    background-color: #4F77C6;
+}
+.navbar .form{
+    margin-left: 10% !important;
+}
+.navbar .form input{
+    border-radius: 20px;
+    padding-left: 42px;
+    width: 400px;
+    height: 40px;
+    border: none;
+    outline: none;
+    font-size: 15px;
+}
+.navbar .form .fa-search{
+    position: absolute;
+    margin-top: 25px;
+    margin-left: 1%;
+    font-size: 18px;
+    font-weight: 100;
+    font-style: normal;
+    color: grey;
+}
 .user-content{
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    margin-top: 20%;
+    margin-top: 10%;
+    margin-left: 5%;
     max-width: 80vw;
-   
 }
 .user-avatar img{
     width: 170px;
@@ -52,4 +83,53 @@
     width: 20px;
     height: 20px;
     object-fit: fill;
+}
+.repositories{
+    margin-top: 8%;
+    max-width: 70vw;
+    margin-left: 20%;
+}
+.repositories h1{
+   font-size: 18px;
+   font-weight: bold;
+}
+.repositories .card{
+    max-height: 100vh;
+    overflow-y: auto;
+    max-width: 230px;
+    width: 230px;
+    border-radius: 10px;
+}
+.repositories .card img{
+   width: 100px;
+   height: 100px;
+   object-fit: cover;
+   margin-top: 5%;
+   margin-left: 26%;
+}
+.repositories .card .card-body span{
+   font-size: 14px;
+   font-weight: normal;
+}
+.repositories .card .card-body{
+    font-size: 16px;
+    font-weight: bolder;
+}
+.repositories .card button{
+    width: 100px;
+    height: 30px;
+    background-color:#31B86C;
+    outline: none;
+    border: none;
+    border-radius: 15px;
+    font-size: 14px;
+    color: white;
+    font-weight: bolder;
+    margin-left: 22%;
+}
+.repositories .card-container{
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-gap: 2rem;
+    margin-top: 3%;
 }
