--- a/git-search/src/app/components/user-profile/user-profile.component.html
+++ b/git-search/src/app/components/user-profile/user-profile.component.html
@@ -1,3 +1,16 @@
+<div class="container-fluid" style="padding: 0; margin: 0;">
+    <nav class="navbar navbar-expand fixed-top">
+        <a class="navbar-brand" href="#">GIT-SEARCH</a>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <form class="form">
+                <i class="fa fa-search" aria-hidden="true"></i><input class="search-bar" type="search" [(ngModel)]="userName" name="userName" (keyup)="search()" 
+                placeholder="Search Git-Search">
+            </form>
+        </div>
+    </nav>
+</div>
+
 <div class="container user-content">
     <div class="user-avatar">
         <img src="{{user.avatar_url}}" alt="profile">
@@ -22,6 +35,24 @@
 
         <div class="github-button">
             <a href="{{user.html_url}}" target="_blank"><button><img src="assets/github-logo.png" alt="button-logo">&nbsp;&nbsp;GITHUB</button></a>
+        </div>
+    </div>
+</div>
+
+<div class=" container repositories">
+    <h1>REPOSITORIES</h1>
+    <div class="row">
+        <div class=" card-container" *ngFor="let repo of repositories">
+            <div class="card">
+                <img src="assets/github-logo.png" class="card-img-top" alt="card-logo">
+                <div class="card-body">
+                    Repo-Name: <span>{{repo.name}}</span> <br>
+                    Description: <span class="card-text">{{repo.description | slice:0:25}}...</span> <br>
+                    Language: <span>{{repo.language}}</span><br>
+                    Created: <span>{{repo.created_at | createDate}}</span> <br><br>
+                    <a href="{{repo.html_url}}" target="_blank"><button>View</button></a>
+                </div>
+            </div>
         </div>
     </div>
 </div>
