--- a/git-search/src/app/app.component.css
+++ b/git-search/src/app/app.component.css
@@ -1,6 +1,3 @@
 .container-fluid{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    margin: auto;
 }
