--- a/git-search/src/app/app.component.css
+++ b/git-search/src/app/app.component.css
@@ -1,3 +1,6 @@
 .container-fluid{
-    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
