--- a/git-search/src/app/components/user-profile/user-profile.component.html
+++ b/git-search/src/app/components/user-profile/user-profile.component.html
@@ -5,7 +5,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <form class="form">
                 <i class="fa fa-search" aria-hidden="true"></i><input class="search-bar" type="search"
-                    [(ngModel)]="userName" name="userName" (keyup)="search()" placeholder="Search Git-Search">
+                    [(ngModel)]="userName" name="userName" (keyup.Enter)="search()" placeholder="Search Git-Search">
             </form>
         </div>
     </nav>
