made site responsive to all devices

--- a/git-search/src/app/components/user-profile/user-profile.component.css
+++ b/git-search/src/app/components/user-profile/user-profile.component.css
@@ -1,136 +1,281 @@
-.navbar a{
-    margin-left: 20%;
-    font-size: 28px;
-    color: white;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-weight: 800;
+.navbar a {
+  margin-left: 20%;
+  margin-right: 2rem;
+  font-size: 28px;
+  color: white;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-weight: 800;
 }
-.navbar{
-    background-color: #4F77C6;
+.navbar {
+  background-color: #4f77c6;
 }
-.navbar .form{
-    margin-left: 10% !important;
+.navbar .form {
+  margin-left: 10% !important;
 }
-.navbar .form input{
-    border-radius: 20px;
-    padding-left: 42px;
-    width: 400px;
-    height: 40px;
-    border: none;
-    outline: none;
-    font-size: 15px;
+.navbar .form input {
+  border-radius: 20px;
+  padding-left: 42px;
+  width: 400px;
+  height: 40px;
+  border: none;
+  outline: none;
+  font-size: 15px;
 }
-.navbar .form .fa-search{
-    position: absolute;
-    margin-top: 25px;
-    margin-left: 1%;
-    font-size: 18px;
-    font-weight: 100;
-    font-style: normal;
-    color: grey;
+.navbar-toggler-icon {
+  background-image: url("src/assets/humberger.svg/");
 }
-.user-content{
+.navbar .form .fa-search {
+  position: absolute;
+  margin-top: 25px;
+  margin-left: 1%;
+  font-size: 18px;
+  font-weight: 100;
+  font-style: normal;
+  color: grey;
+}
+.user-content {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin-top: 10%;
+  margin-left: -10%;
+  width: 65vw;
+  max-width: 100%;
+  max-height: 50vh;
+}
+.user-avatar img {
+  width: 170px;
+  height: 170px;
+  object-fit: fill;
+  border-radius: 50%;
+}
+.user-info {
+  line-height: 20px;
+  margin-left: 5%;
+}
+.user-info .user-name {
+  font-size: 18px;
+}
+.user-info .user-name span {
+  font-size: 13px;
+}
+.user-extra {
+  display: flex;
+  flex-direction: row;
+}
+.user-extra span {
+  font-size: 14px;
+  font-weight: bolder;
+  color: black;
+}
+.user-extra p {
+  font-size: 15px;
+}
+.github-button button {
+  width: 120px;
+  height: 40px;
+  font-size: 13px;
+  font-weight: bold;
+  color: white;
+  background-color: #55b16f;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+
+  text-decoration: none;
+}
+.github-button button img {
+  width: 20px;
+  height: 20px;
+  object-fit: fill;
+}
+.repositories {
+  margin-top: 8%;
+  max-width: 70vw;
+}
+.repositories h1 {
+  font-size: 18px;
+  font-weight: bold;
+}
+.repositories .card {
+  max-height: 100vh;
+  overflow-y: auto;
+  max-width: 230px;
+  width: 230px;
+  border-radius: 10px;
+}
+.repositories .card img {
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+  margin-top: 5%;
+  margin-left: 26%;
+}
+.repositories .card .card-body span {
+  font-size: 14px;
+  font-weight: normal;
+}
+.repositories .card .card-body {
+  font-size: 16px;
+  font-weight: bolder;
+}
+.repositories .card button {
+  width: 100px;
+  height: 30px;
+  background-color: #31b86c;
+  outline: none;
+  border: none;
+  border-radius: 15px;
+  font-size: 14px;
+  color: white;
+  font-weight: bolder;
+  margin-left: 22%;
+}
+.repo-container {
+  margin-left: 0rem;
+  display: inline-grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-auto-rows: auto;
+  grid-gap: 2.5rem;
+}
+/* smaller phones media query */
+@media screen and (min-device-width: 280px) and (max-device-width: 653px) {
+  .body {
+    width: 100vw;
+    overflow-x: hidden;
+  }
+  .repo-container {
+    margin-left: 0rem;
+    display: inline-grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-auto-rows: auto;
+    grid-gap: 2rem;
+  }
+  .repositories .card {
+    max-height: 100vh;
+    max-width: 100%;
+    width: 100%;
+    border-radius: 10px;
+  }
+  .repositories {
+    margin-top: 8%;
+    max-width: 100vw;
+  }
+  .user-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 8rem;
+    margin-left: 1.8rem;
+    width: 59vw;
+    max-width: 100%;
+    max-height: 50vh;
+  }
+}
+/* small phones media query */
+@media screen and (min-device-width: 320px) and (max-device-width: 640px) {
+  .body {
+    width: 100vw;
+    overflow-x: hidden;
+  }
+  .repo-container {
+    margin-left: 0rem;
+    display: inline-grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-auto-rows: auto;
+    grid-gap: 2rem;
+  }
+  .repositories .card {
+    max-height: 100vh;
+    max-width: 100%;
+    width: 100%;
+    border-radius: 10px;
+  }
+  .repositories {
+    margin-top: 8%;
+    max-width: 100vw;
+  }
+  .user-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 6rem;
+    margin-left: 2rem;
+    width: 65vw;
+    max-width: 100%;
+    max-height: 50vh;
+  }
+}
+/* iphone x media query */
+@media only screen and (min-device-width: 375px) and (max-device-width: 812px) {
+  body {
+    width: 100vw;
+    overflow-x: hidden;
+  }
+  .repo-container {
+    margin-left: 0rem;
+    display: inline-grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-auto-rows: auto;
+    grid-gap: 2rem;
+  }
+  .repositories .card {
+    max-height: 100vh;
+    max-width: 100%;
+    width: 100%;
+    border-radius: 10px;
+  }
+  .repositories {
+    margin-top: 8%;
+    max-width: 100vw;
+  }
+  .user-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 6rem;
+    margin-left: 2rem;
+    width: 65vw;
+    max-width: 100%;
+    max-height: 50vh;
+  }
+}
+/* ipad media query */
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+  .body {
+    width: 100vw;
+    overflow-x: hidden;
+  }
+  .repo-container {
+    margin-left: 0rem;
+    display: inline-grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: auto;
+    grid-gap: 2rem;
+  }
+  .repositories .card {
+    max-height: 100vh;
+    max-width: 100%;
+    width: 100%;
+    border-radius: 10px;
+  }
+  .repositories {
+    margin-top: 8%;
+    max-width: 100vw;
+  }
+  .user-content {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    margin-top: 10%;
-    margin-left: -10%;
+    margin-top: 6rem;
+    margin-left: 2rem;
     width: 65vw;
     max-width: 100%;
     max-height: 50vh;
-}
-.user-avatar img{
-    width: 170px;
-    height: 170px;
-    object-fit: fill;
-    border-radius: 50%;
-}
-.user-info{
-    line-height: 20px;
-    margin-left: 5%;
-}
-.user-info .user-name{
-    font-size: 18px;
-}
-.user-info .user-name span{
-    font-size: 13px;
-}
-.user-extra{
-    display: flex;
-    flex-direction: row;
-}
-.user-extra span{
-    font-size: 14px;
-    font-weight: bolder;
-    color: black;
-}
-.user-extra p{
-    font-size: 15px;
-}
-.github-button button{
-    width: 120px;
-    height: 40px;
-    font-size: 13px;
-    font-weight: bold;
-    color: white;
-    background-color:#55B16F;
-    outline: none;
-    border: none;
-    border-radius: 5px;
-   
-    text-decoration: none;
-}
-.github-button button img{
-    width: 20px;
-    height: 20px;
-    object-fit: fill;
-}
-.repositories{
-    margin-top: 8%;
-    max-width: 70vw;
-}
-.repositories h1{
-   font-size: 18px;
-   font-weight: bold;
-}
-.repositories .card{
-    max-height: 100vh;
-    overflow-y: auto;
-    max-width: 230px;
-    width: 230px;
-    border-radius: 10px;
-}
-.repositories .card img{
-   width: 100px;
-   height: 100px;
-   object-fit: cover;
-   margin-top: 5%;
-   margin-left: 26%;
-}
-.repositories .card .card-body span{
-   font-size: 14px;
-   font-weight: normal;
-}
-.repositories .card .card-body{
-    font-size: 16px;
-    font-weight: bolder;
-}
-.repositories .card button{
-    width: 100px;
-    height: 30px;
-    background-color:#31B86C;
-    outline: none;
-    border: none;
-    border-radius: 15px;
-    font-size: 14px;
-    color: white;
-    font-weight: bolder;
-    margin-left: 22%;
-}
-.repositories .card-container{
-    display: grid;
-    grid-template-columns: auto auto;
-    grid-gap: 2rem;
-    margin-top: 3%;
+  }
 }
