--- a/git-search/src/app/components/user-profile/user-profile.component.html
+++ b/git-search/src/app/components/user-profile/user-profile.component.html
@@ -1,11 +1,19 @@
 <div class="container-fluid" style="padding: 0; margin: 0;">
-    <nav class="navbar navbar-expand fixed-top">
-        <a class="navbar-brand" href="#">GIT-SEARCH</a>
+    <nav class="navbar navbar-expand-lg fixed-top">
+        <a class="navbar-brand" href="/">GIT-SEARCH</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <form class="form">
+            <!-- <form class="form">
                 <i class="fa fa-search" aria-hidden="true"></i><input class="search-bar" type="search"
                     [(ngModel)]="userName" name="userName" (keyup.Enter)="search()" placeholder="Search Git-Search">
+            </form> -->
+            <form class="d-flex search-form" action="/query" method="GET">
+                <input class="form-control me-2" type="search" id="search" name="search" type="search" placeholder="Search by title, ISBN" aria-label="Search" aria-label="Search">&nbsp;
+                <button class="btn btn-outline-dark" name="search" type="submit" id="search_button">Search</button>
             </form>
         </div>
     </nav>
@@ -43,14 +51,14 @@
 
     <div class=" container repositories">
         <h1>REPOSITORIES</h1>
-        <div class="row">
+        <div class="repo-container">
             <div class=" card-container" *ngFor="let repo of repositories">
                 <div class="card">
                     <img src="assets/github-logo.png" class="card-img-top" alt="card-logo">
                     <div class="card-body">
-                        Repo-Name: <span>{{repo.name}}</span> <br>
-                        Description: <span class="card-text">{{repo.description | slice:0:25}}...</span> <br>
-                        Language: <span>{{repo.language}}</span><br>
+                        Repo-Name: <span>{{repo.name | slice:0:15}}</span> <br>
+                        Description: <span class="card-text">{{repo.description | slice:0:15}}...</span> <br>
+                        Language: <span>{{repo.language | slice:0:15}}</span><br>
                         Created: <span>{{repo.created_at | createDate}}</span> <br><br>
                         <a href="{{repo.html_url}}" target="_blank"><button>View</button></a>
                     </div>
