--- a/git-search/src/styles.css
+++ b/git-search/src/styles.css
@@ -1,13 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
-*{
-    margin: 0;
-    top: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  top: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-body{
-    background-color: #E0E0E0;
-    margin: 0 auto;
-    width: 1500px;
-    overflow-x: hidden;
+body {
+  background-color: #e0e0e0;
+  overflow-x: hidden;
 }
