--- a/git-search/src/app/components/user-profile/user-profile.component.css
+++ b/git-search/src/app/components/user-profile/user-profile.component.css
@@ -24,21 +24,16 @@
 .navbar-toggler-icon {
   background-image: url("src/assets/humberger.svg/");
 }
-.navbar .form .fa-search {
-  position: absolute;
-  margin-top: 25px;
-  margin-left: 1%;
-  font-size: 18px;
-  font-weight: 100;
-  font-style: normal;
-  color: grey;
+.search-form input{
+    border-radius: 30px;
+    padding-left: 30px;
 }
 .user-content {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  margin-top: 10%;
+  margin-top: 6rem;
   margin-left: -10%;
   width: 65vw;
   max-width: 100%;
@@ -92,6 +87,7 @@
 }
 .repositories {
   margin-top: 8%;
+  margin-bottom: 3rem;
   max-width: 70vw;
 }
 .repositories h1 {
@@ -100,7 +96,6 @@
 }
 .repositories .card {
   max-height: 100vh;
-  overflow-y: auto;
   max-width: 230px;
   width: 230px;
   border-radius: 10px;
@@ -135,7 +130,7 @@
 .repo-container {
   margin-left: 0rem;
   display: inline-grid;
-  grid-template-columns: repeat(1, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   grid-auto-rows: auto;
   grid-gap: 2.5rem;
 }
